--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Testing...
 author: benjburgess
 email: your-email@domain.com
-theme: jekyll-theme-minimal
+theme: minima
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
