--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,11 @@ twitter_username: your-twitter-handle # DO NOT include the @ character, or else 
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+
+#This code has been added from https://github.com/jekyll/minima/blob/master/_config.yml#L37-L40
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+header_pages:
+ - PageA.md
+ - PageB.md
+ - PageC.md
