--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ author: benjburgess
 email: your-email@domain.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
-  benjburgess.github.io\
-  \ 
+  benjburgess.github.io
+   
   Finding simple patterns from complex data.
 #Write an awesome description for your new site here. You can edit this
 #line in _config.yml. It will appear in your document head meta (for
