--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Ben Burgess
 author: benjburgess
-email: your-email@domain.com
+#email: your-email@domain.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
   benjburgess.github.io - 
