--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: benjburgess
 #email: your-email@domain.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
-  benjburgess.github.io - "[benjburgess.github.io](benjburgess.github.io)""
+  benjburgess.github.io - "[benjburgess.github.io](benjburgess.github.io)"
 #Write an awesome description for your new site here. You can edit this
 #line in _config.yml. It will appear in your document head meta (for
 #Google search results) and in your feed.xml site description.
