--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ show_excerpts: true # set to false to remove excerpts on the homepage
 header_pages:
  - about.md
  - data.md
+ - ecology.md
  - multiplestressR.md
  - publications.md
 
