--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 title: Ben Burgess
-author: benjburgess
+author: benjburgess.github.io 
 #email: your-email@domain.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
-  benjburgess.github.io  
-    
-  benjamin.joshua.burgess  [\@]  gmail.com
+benjamin.joshua.burgess  [at]  gmail.com
 
 #Write an awesome description for your new site here. You can edit this
 #line in _config.yml. It will appear in your document head meta (for
