--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 title: Ben Burgess
-author: benjburgess.github.io 
-#email: your-email@domain.com
+author: benjburgess
+email: benjamin.joshua.burgess@gmail.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
-benjamin.joshua.burgess  [at]  gmail.com  
-
+benjburgess.github.io
 #Write an awesome description for your new site here. You can edit this
 #line in _config.yml. It will appear in your document head meta (for
 #Google search results) and in your feed.xml site description.
