--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Ben Burgess
-author: benjburgess
-email: benjamin.joshua.burgess@gmail.com
+author: 
+  name: benjburgess
+  email: benjamin.joshua.burgess@gmail.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
 benjburgess.github.io
