--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ben Burgess
-author: Ben Burgess
+author: benjburgess
 name: benjburgess
 email: benjamin.joshua.burgess[at]gmail.com
 theme: minima
